salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/PublicityRightsProhibited__c.field-meta.xml
<CustomField>
    <fullName>PublicityRightsProhibited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>APPS-3057</description>
    <inlineHelpText>This will be checked if the customer has opted out of Rapid7 using their name or logo without consent. This should not be used for reporting purposes</inlineHelpText>
    <label>Publicity Rights Prohibited</label>
    <type>Checkbox</type>
</CustomField>