salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/PublishingNotes__c.field-meta.xml
<CustomField>
    <fullName>PublishingNotes__c</fullName>
    <label>Publishing Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>