salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/PublishingStatus__c.field-meta.xml
<CustomField>
    <fullName>PublishingStatus__c</fullName>
    <description>Whether the record is published as data for consumption by other systems</description>
    <inlineHelpText>Whether the record is published as data for consumption by other systems</inlineHelpText>
    <label>Publishing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PublishingStatus</valueSetName>
    </valueSet>
</CustomField>