salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/PurchasingBehaviorHealthScore__c.field-meta.xml
<CustomField>
    <fullName>PurchasingBehaviorHealthScore__c</fullName>
    <label>Purchasing Behavior Health Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>