salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/Rapid7Industry__c.field-meta.xml
<CustomField>
    <fullName>Rapid7Industry__c</fullName>
    <label>Rapid7 Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Communications &amp; Media</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Other Industry</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Utilities &amp; Energy</fullName>
            </value>
            <value>
                <fullName>#Error!</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>