salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/Rapid7MarketSegment__c.field-meta.xml
<CustomField>
    <fullName>Rapid7MarketSegment__c</fullName>
    <label>Rapid7 Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Large Enterprise</fullName>
            </value>
            <value>
                <fullName>Mid-Market Enterprise</fullName>
            </value>
            <value>
                <fullName>Mid-Market</fullName>
            </value>
            <value>
                <fullName>Small Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>