salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/Rapid7PartnerLevel__c.field-meta.xml
<CustomField>
    <fullName>Rapid7PartnerLevel__c</fullName>
    <description>This information is maintained by Impartner.</description>
    <label>Rapid7 Partner Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rapid7_Partner_Level</valueSetName>
    </valueSet>
</CustomField>