salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/Rapid7SubIndustry__c.field-meta.xml
<CustomField>
    <fullName>Rapid7SubIndustry__c</fullName>
    <label>Rapid7 Sub-Industry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Rapid7Industry__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air Transport</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Broadcasting &amp; Cable</fullName>
            </value>
            <value>
                <fullName>Consumer Nondurable Products</fullName>
            </value>
            <value>
                <fullName>Electric and Gas Utilities</fullName>
            </value>
            <value>
                <fullName>Energy Resources and Processing</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>General Retailers</fullName>
            </value>
            <value>
                <fullName>Grocery</fullName>
            </value>
            <value>
                <fullName>Health Insurance</fullName>
            </value>
            <value>
                <fullName>Heavy Industry</fullName>
            </value>
            <value>
                <fullName>Higher Education</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Insurance (Other than Health)</fullName>
            </value>
            <value>
                <fullName>International Government</fullName>
            </value>
            <value>
                <fullName>IT Hardware</fullName>
            </value>
            <value>
                <fullName>IT Services</fullName>
            </value>
            <value>
                <fullName>Legal Services</fullName>
            </value>
            <value>
                <fullName>Life Sciences and Healthcare Products</fullName>
            </value>
            <value>
                <fullName>Local and Regional Government</fullName>
            </value>
            <value>
                <fullName>Motor Freight</fullName>
            </value>
            <value>
                <fullName>National Government</fullName>
            </value>
            <value>
                <fullName>National Labs</fullName>
            </value>
            <value>
                <fullName>Natural Resources and Materials</fullName>
            </value>
            <value>
                <fullName>Other Business, Technical and Consumer Services</fullName>
            </value>
            <value>
                <fullName>Other Industry</fullName>
            </value>
            <value>
                <fullName>Physician</fullName>
            </value>
            <value>
                <fullName>Pipelines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>