salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/RelatedCustomerAccount__c.field-meta.xml
<CustomField>
    <fullName>RelatedCustomerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If a Partner is also a Customer, please populate this field with the Customer Account.</inlineHelpText>
    <label>Related Customer Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Related Customer Account)</relationshipLabel>
    <relationshipName>RelatedPartnerAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>