salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/RelatedPartnerAccount__c.field-meta.xml
<CustomField>
    <fullName>RelatedPartnerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If a Customer is also a Partner, please populate this field with the Partner Account.</inlineHelpText>
    <label>Related Partner Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>RelatedCustomerAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>