salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/ReportingDivision__c.field-meta.xml
<CustomField>
    <fullName>ReportingDivision__c</fullName>
    <label>Reporting Division</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ManagerLevelTeam__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>SLED</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>National</fullName>
                <isActive>false</isActive>
                <label>National</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>