salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/RTEAccount__c.field-meta.xml
<CustomField>
    <fullName>RTEAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is indicator of Regional Territory Executive accounts, a subset of the IDR team.</description>
    <label>RTE Account</label>
    <type>Checkbox</type>
</CustomField>