salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/rvpe__RVAccount__c.field-meta.xml
<CustomField>
    <fullName>rvpe__RVAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Back link from standard SFDC Account to RV Account.</description>
    <label>RV Account</label>
    <referenceTo>rvpe__RVAccount__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>