salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/SalesDevelopmentRepSDR__c.field-meta.xml
<CustomField>
    <fullName>SalesDevelopmentRepSDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Development Rep (SDR)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts9</relationshipName>
    <type>Lookup</type>
</CustomField>