salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/SalesPriorityLevel__c.field-meta.xml
<CustomField>
    <fullName>SalesPriorityLevel__c</fullName>
    <description>Please select the priority level for this Account. If the Account is a priority for more than one product set, you may select more than one option.</description>
    <inlineHelpText>Please select the priority level for this Account. If the Account is a priority for more than one product set, you may select more than one option.</inlineHelpText>
    <label>Sales Priority Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TEM Priority A</fullName>
            </value>
            <value>
                <fullName>TEM Priority B</fullName>
            </value>
            <value>
                <fullName>TEM Priority C</fullName>
            </value>
            <value>
                <fullName>TEM Hot</fullName>
            </value>
            <value>
                <fullName>IDR Priority A</fullName>
            </value>
            <value>
                <fullName>IDR Priority B</fullName>
            </value>
            <value>
                <fullName>IDR Priority C</fullName>
            </value>
            <value>
                <fullName>IDR Hot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>