salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/SBQQ__RenewalModel__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__RenewalModel__c</fullName>
    <description>The option to distinguish between Subscription or Asset based renewal.</description>
    <inlineHelpText>Choose Asset Based to make renewals based off of an account&#39;s Assets or choose Subscription based to makes renewals based off of subscriptions created from a quote.</inlineHelpText>
    <label>Renewal Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asset Based</fullName>
            </value>
            <value>
                <fullName>Contract Based</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>