salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/Selling_Notes__c.field-meta.xml
<CustomField>
    <fullName>Selling_Notes__c</fullName>
    <label>Selling Notes</label>
    <type>TextArea</type>
</CustomField>