salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/ServicesDiscount__c.field-meta.xml
<CustomField>
    <fullName>ServicesDiscount__c</fullName>
    <description>This information is maintained by Impartner.</description>
    <label>Services Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>