salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/ServicesLeadGen__c.field-meta.xml
<CustomField>
    <fullName>ServicesLeadGen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Services Lead Gen</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsoLf0</relationshipName>
    <type>Lookup</type>
</CustomField>