salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <label>SLA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Enhanced</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>