salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/SolutionsEngineerSE__c.field-meta.xml
<CustomField>
    <fullName>SolutionsEngineerSE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solutions Engineer (SE)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>