salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Displays the corresponding status for customer accounts (based on type and whether customer has active/inactive products), otherwise displays the account&#39;s record type</description>
    <formula>IF(RecordType.DeveloperName &lt;&gt; &quot;Customer&quot;, RecordType.Name,
IF(AND(TEXT(Type) = &quot;Customer&quot;, NOT(ISBLANK(ProductActive__c))),&quot;Customer-Active&quot;,
IF(AND(TEXT(Type) = &quot;Customer&quot;, NOT(ISBLANK(ProductsInactive__c))), &quot;Customer-InActive&quot;,
IF(AND(TEXT(Type) = &quot;Customer&quot;,ISBLANK(ProductsInactive__c),ISBLANK(ProductActive__c),NOT(ISBLANK(ProductsLifetime__c))), &quot;Customer-Lost&quot;,
IF(AND(TEXT(Type)=&quot;Customer&quot;,ISBLANK(ProductsInactive__c),ISBLANK(ProductActive__c),ISBLANK(ProductsLifetime__c)), &quot;Prospect&quot;, TEXT(Type))))))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>