salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/StatusfromNetsuite__c.field-meta.xml
<CustomField>
    <fullName>StatusfromNetsuite__c</fullName>
    <description>Updated by integration with NetSuite</description>
    <label>Status from NetSuite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>