salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/Super_Support_Customer__c.field-meta.xml
<CustomField>
    <fullName>Super_Support_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Super Support Customer</label>
    <type>Checkbox</type>
</CustomField>