salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/Support_Suspended__c.field-meta.xml
<CustomField>
    <fullName>Support_Suspended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows account management to suspend support for customers who are late on payment or non-responsive</description>
    <inlineHelpText>If this box is checked, support has been suspended by this customer&#39;s account manager</inlineHelpText>
    <label>Support Suspended</label>
    <type>Checkbox</type>
</CustomField>