salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/SupportHealthScore__c.field-meta.xml
<CustomField>
    <fullName>SupportHealthScore__c</fullName>
    <label>Support Health Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>