salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/TargetCustomerSize__c.field-meta.xml
<CustomField>
    <fullName>TargetCustomerSize__c</fullName>
    <label>Target Customer Size</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>Large Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>