salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/Technical_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Technical_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Account Manager</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.UserRoleId</field>
            <operation>equals</operation>
            <value>00E30000001PQj4</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>TAM_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>