salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/TEM_ABM__c.field-meta.xml
<CustomField>
    <fullName>TEM_ABM__c</fullName>
    <defaultValue>true</defaultValue>
    <label>TEM ABM</label>
    <type>Checkbox</type>
</CustomField>