salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/TEMAE__c.field-meta.xml
<CustomField>
    <fullName>TEMAE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TEM AE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>