salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/TEMDeck__c.field-meta.xml
<CustomField>
    <fullName>TEMDeck__c</fullName>
    <label>TEM Deck #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>