salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/Theater__c.field-meta.xml
<CustomField>
    <fullName>Theater__c</fullName>
    <label>Theater</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TeamTerritoryGroup__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APAC ANZ</fullName>
            </value>
            <value>
                <fullName>APAC Greater China</fullName>
            </value>
            <value>
                <fullName>APAC India Region</fullName>
            </value>
            <value>
                <fullName>APAC Japan</fullName>
            </value>
            <value>
                <fullName>APAC Korea</fullName>
            </value>
            <value>
                <fullName>APAC SEA</fullName>
            </value>
            <value>
                <fullName>Central Enterprise</fullName>
            </value>
            <value>
                <fullName>Central Mid-Market North</fullName>
            </value>
            <value>
                <fullName>Central Mid-Market South</fullName>
            </value>
            <value>
                <fullName>Central Named North</fullName>
            </value>
            <value>
                <fullName>Central Named South</fullName>
            </value>
            <value>
                <fullName>East Enterprise</fullName>
            </value>
            <value>
                <fullName>East Mid-Market North</fullName>
            </value>
            <value>
                <fullName>East Mid-Market South</fullName>
            </value>
            <value>
                <fullName>East Named North</fullName>
            </value>
            <value>
                <fullName>East Named South</fullName>
            </value>
            <value>
                <fullName>EMEA Africa</fullName>
            </value>
            <value>
                <fullName>EMEA BeNeLux</fullName>
            </value>
            <value>
                <fullName>EMEA DACh</fullName>
            </value>
            <value>
                <fullName>EMEA Eastern Europe</fullName>
            </value>
            <value>
                <fullName>EMEA Middle East</fullName>
            </value>
            <value>
                <fullName>EMEA Scandinavia/Nordics</fullName>
            </value>
            <value>
                <fullName>EMEA Southern Europe</fullName>
            </value>
            <value>
                <fullName>EMEA UK/Ireland</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>SLED East</fullName>
            </value>
            <value>
                <fullName>SLED West</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>West Canada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>