salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/VMIntegration__c.field-meta.xml
<CustomField>
    <fullName>VMIntegration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VM Integration</label>
    <type>Checkbox</type>
</CustomField>