salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Won_Opportunities__c</fullName>
    <description>Count of all Closed Won opportunities for a given account.</description>
    <label>Won Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>