salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/Workflow__c.field-meta.xml
<CustomField>
    <fullName>Workflow__c</fullName>
    <label>Workflow</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>