salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/recordTypes/TechnologyProvider.recordType-meta.xml
<RecordType>
    <fullName>TechnologyProvider</fullName>
    <active>true</active>
    <description>Strategic Technology Alliances, Competitor or Technology</description>
    <label>Technology Provider</label>
</RecordType>