salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/validationRules/CannotEditAddress.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotEditAddress</fullName>
    <active>true</active>
    <description>If the Account has been published, the addresses cannot be updated in Salesforce.</description>
    <errorConditionFormula>(
  NOT(ISNEW()) &amp;&amp;
  ISPICKVAL(PublishingStatus__c, &quot;Published&quot;) &amp;&amp;
  (
    ISCHANGED(BillingStreet) ||
    ISCHANGED(BillingCity) ||
    ISCHANGED(BillingState) ||
    ISCHANGED(BillingPostalCode) ||
    ISCHANGED(BillingCountry) ||
    ISCHANGED(ShippingStreet) ||
    ISCHANGED(ShippingCity) ||
    ISCHANGED(ShippingState) ||
    ISCHANGED(ShippingPostalCode) ||
    ISCHANGED(ShippingCountry)
  ) &amp;&amp;
  $Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp;
  NOT( $Permission.BypassValidationRules )
)</errorConditionFormula>
    <errorMessage>Addresses cannot be edited if the Account has been published to NetSuite</errorMessage>
</ValidationRule>