salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/validationRules/PhoneNumberLength.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneNumberLength</fullName>
    <active>true</active>
    <description>Phone number length No  more than 22 digit</description>
    <errorConditionFormula>NOT( $Permission.BypassValidationRules )&amp;&amp;
OR(LEN(Phone) &gt; 22)</errorConditionFormula>
    <errorMessage>The Phone number length No more than 22 digit</errorMessage>
</ValidationRule>